# MultiBlockBPE

./: .gitignore  CMakeLists.txt  Makefile  README.md  results.txt  test
assets/: out.txt  regex_grammar.txt  sample.txt
benchmark/: exact_match.py  generate_tokens.py  llama_accuracy.py  sample_benchmark.py  setup_bench.py
gold/: mmlu_gold.json
include/: DLLToken.h  Token.h  byte_encoder.h  merges.h  tokenizer.cuh  tokenizer_interface.h  utils.h
output/: out_1024_195.txt  out_1562_128.txt  out_195_1024.txt  out_256_781.txt  out_390_512.txt  out_512_390.txt  out_768_260.txt  out_781_256.txt  results.txt  token_ids_BATCH_256
scripts/: build.sh
src/: DLLToken.cpp  Token.cpp  byte_encoder.cpp  compare_decoded_text.py  lex.yy.c  lexer.l  main.cpp  merges.cpp  similarity.py  tokenizer.cu  utils.cpp
